Add nav and Image

--- a/index.html
+++ b/index.html
@@ -10,9 +10,17 @@
     <header>
         <h1>Rob's personal website</h1>
         <nav>
-           <a href="#about">About</a>
-           <a href="#skills">Skills</a> 
+           <a href="#contact">Kontakt</a>
+           <a href="#bio">Bio</a> 
         </nav>
     </header>
+    <main>
+        <section>
+            <div>
+              <img src="" alt="" width="" height="" title="">
+            </div>
+        </section>
+        
+    </main>
 </body>
 </html>
