--- a/index.html
+++ b/index.html
@@ -20,7 +20,52 @@
               <img src="" alt="" width="" height="" title="">
             </div>
         </section>
-        
+        <section>
+            <h2>interests</h2>
+                    <table>
+                        <tbody>
+                            <tr>
+                                <td>Int 1</td>
+                                <td>Int 2</td>
+                                <td>Int 3</td>
+                                <td>Int 4</td>
+                                <td>Int 5</td>
+                                <td>Int 6</td>
+                            </tr>
+                            <tr>
+                                <td>Int 7</td>
+                                <td>Int 8</td>
+                                <td>Int 9</td>
+                                <td>Int 10</td>
+                                <td>Int 11</td>
+                                <td>Int 12</td>
+                            </tr>
+                        </tbody>
+                    </table>
+            <h2>skills</h2>
+        <section>
+                    <table>
+                        <tbody>
+                            <tr>
+                                <td>skill 1</td>
+                                <td>skill 2</td>
+                                <td>skill 3</td>
+                                <td>skill 4</td>
+                                <td>skill 5</td>
+                                <td>skill 6</td>
+                            </tr>
+                            <tr>
+                                <td>skill 7</td>
+                                <td>skill 8</td>
+                                <td>skill 9</td>
+                                <td>skill 10</td>
+                                <td>skill 11</td>
+                                <td>skill 12</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </section>
+        </section>
     </main>
 </body>
 </html>
