Add Kontakt and Links

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                         </tbody>
                     </table>
             <h2>skills</h2>
+        </section>
         <section>
                     <table>
                         <tbody>
@@ -64,7 +65,15 @@
                             </tr>
                         </tbody>
                     </table>
-                </section>
+        </section>
+        <section id="contact">
+            <h3>Kontakt</h3>
+        </section>
+        <section>
+            <a href=""><img src="" alt="">Github</a>
+            <a href=""><img src="" alt="">Codepen</a>
+            <a href=""><img src="" alt="">LinkedIn</a>
+            <a href=""><img src="" alt="">Xing</a>
         </section>
     </main>
 </body>
