--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             </div>
         </section>
         <section>
+            <div>
             <h2>interests</h2>
                     <table>
                         <tbody>
@@ -42,9 +43,12 @@
                             </tr>
                         </tbody>
                     </table>
-            <h2>skills</h2>
+                    </section>
+                </div>
         </section>
         <section>
+            <div>
+                <h2>skills</h2>
                     <table>
                         <tbody>
                             <tr>
@@ -65,15 +69,67 @@
                             </tr>
                         </tbody>
                     </table>
+                </div>
         </section>
         <section id="contact">
-            <h3>Kontakt</h3>
+            <h2>Kontakt</h2>
         </section>
         <section>
             <a href=""><img src="" alt="">Github</a>
             <a href=""><img src="" alt="">Codepen</a>
             <a href=""><img src="" alt="">LinkedIn</a>
             <a href=""><img src="" alt="">Xing</a>
+        </section>
+        <section id="#bio">
+            <h2>Bio</h2>
+            <div>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis, quo cum. Dolore, doloremque! Nisi quaerat omnis optio? Officiis explicabo, laborum eos sequi accusantium nihil aspernatur eaque dolorem non reiciendis enim.</p>
+            </div>   
+        </section>
+        <section>
+            <div>
+                <h2>CV</h2>
+                <table>
+                    <tbody>
+                    <tr>
+                    <td>04.2021 bis jetzt</td>
+                    <td>Web Development Bootcamp</td>
+                    <td>neuefische GmbH</td>
+                     <td>Hamburg</td>
+                    </tr>
+                    <tr>
+                    <td>04.2020 bis 03.2021</td>
+                    <td>Junior Java Developer</td>
+                    <td>Academic Works</td>
+                    <td>Hamburg</td>
+                    </tr>
+                    <tr>
+                    <td>01.2020 bis 03.2020</td>
+                    <td>Java Bootcamp</td>
+                    <td>Academic Works</td>
+                     <td>Hamburg</td>
+                    </tr>
+                    <tr>
+                    <td>05.2014 bis 12.2019</td>
+                    <td>Grafiker/Designer</td>
+                    <td>Justfitteds</td>
+                     <td>Hamburg</td>
+                    </tr>
+                    <tr>
+                    <td>2013 bis 2014</td>
+                    <td>Grafiker/Cutter/Colorist</td>
+                    <td>Mamapost GmbH</td>
+                     <td>Hamburg/Berlin</td>
+                    </tr>
+                    <tr>
+                    <td>2008 bis 2013</td>
+                    <td>Grafiker/Head of graphic</td>
+                    <td>TVN Group/Mobile Productions</td>
+                     <td>Hannover/Hamburg</td>
+                    </tr>
+                    </tbody>
+                    </table>
+            </div>
         </section>
     </main>
 </body>
