Added Folder images and logos

--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
             <h2>Kontakt</h2>
         </section>
         <section>
-            <a href=""><img src="" alt="">Github</a>
-            <a href=""><img src="" alt="">Codepen</a>
-            <a href=""><img src="" alt="">LinkedIn</a>
-            <a href=""><img src="" alt="">Xing</a>
+            <a href=""><img src="./images/Octocat.png" alt="Github">Github</a>
+            <a href=""><img src="./images/codepen.png" alt="Codepen">Codepen</a>
+            <a href=""><img src="./images/linkedin.png" alt="LinkedIn">LinkedIn</a>
+            <a href=""><img src="./images/640px-Xing_logo.svg.png" alt="Xing">Xing</a>
         </section>
         <section id="#bio">
             <h2>Bio</h2>
