--- a/index.html
+++ b/index.html
@@ -26,20 +26,16 @@
                     <table>
                         <tbody>
                             <tr>
-                                <td>Int 1</td>
-                                <td>Int 2</td>
-                                <td>Int 3</td>
-                                <td>Int 4</td>
-                                <td>Int 5</td>
-                                <td>Int 6</td>
+                                <td>Rennrad fahren</td>
+                                <td>Grafik Design</td>
+                                <td>Schriften</td>
+                                <td>Sneaker</td>
                             </tr>
                             <tr>
-                                <td>Int 7</td>
-                                <td>Int 8</td>
-                                <td>Int 9</td>
-                                <td>Int 10</td>
-                                <td>Int 11</td>
-                                <td>Int 12</td>
+                                <td>Reisen</td>
+                                <td>Süd-Ost-Asien</td>
+                                <td>80er Jahre</td>
+                                <td>Videospiele</td>
                             </tr>
                         </tbody>
                     </table>
@@ -52,20 +48,15 @@
                     <table>
                         <tbody>
                             <tr>
-                                <td>skill 1</td>
-                                <td>skill 2</td>
-                                <td>skill 3</td>
-                                <td>skill 4</td>
-                                <td>skill 5</td>
-                                <td>skill 6</td>
+                                <td>HTML</td>
+                                <td>CSS</td>
+                                <td>JavaScript</td>
+                                <td>Java</td>
                             </tr>
                             <tr>
-                                <td>skill 7</td>
-                                <td>skill 8</td>
-                                <td>skill 9</td>
-                                <td>skill 10</td>
-                                <td>skill 11</td>
-                                <td>skill 12</td>
+                                <td>Adobe CS</td>
+                                <td>Procreate</td>
+                                <td>Final Cut</td>
                             </tr>
                         </tbody>
                     </table>
@@ -75,10 +66,12 @@
             <h2>Kontakt</h2>
         </section>
         <section>
+            <div>
             <a href=""><img src="./images/Octocat.png" alt="Github">Github</a>
             <a href=""><img src="./images/codepen.png" alt="Codepen">Codepen</a>
             <a href=""><img src="./images/linkedin.png" alt="LinkedIn">LinkedIn</a>
             <a href=""><img src="./images/640px-Xing_logo.svg.png" alt="Xing">Xing</a>
+            </div>
         </section>
         <section id="#bio">
             <h2>Bio</h2>
