Added contaced data

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main>
         <section>
             <div>
-              <img src="" alt="" width="" height="" title="">
+              <img src="" alt="" title="">
             </div>
         </section>
         <section>
@@ -64,6 +64,8 @@
         </section>
         <section id="contact">
             <h2>Kontakt</h2>
+            <p>Tel 017X XXX XXX X</p>
+            <p>Mail<a href="mailto:roscha80@web.de">roscha80@web.de</a></p>
         </section>
         <section>
             <div>
