--- a/index.html
+++ b/index.html
@@ -127,6 +127,10 @@
             </div>
         </section>
     </main>
-    <footer>Footer</footer>
+    <footer>
+        <a href="">Impressum</a>
+        <a href="">AGB</a>
+        <a href="">Kontakt</a>
+    </footer>
 </body>
 </html>
