Added a picture of me

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main>
         <section>
             <div>
-              <img src="" alt="" title="">
+              <img src="./images/me.jpeg" alt="Hier sollte ein Bild von mir sein" title="Its me :)">
             </div>
         </section>
         <section>
