--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <a href=""><img src="./images/640px-Xing_logo.svg.png" alt="Xing">Xing</a>
             </div>
         </section>
-        <section id="#bio">
+        <section id="bio">
             <h2>Bio</h2>
             <div>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis, quo cum. Dolore, doloremque! Nisi quaerat omnis optio? Officiis explicabo, laborum eos sequi accusantium nihil aspernatur eaque dolorem non reiciendis enim.</p>
