--- a/index.html
+++ b/index.html
@@ -1,136 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Website</title>
 </head>
+
 <body>
     <header>
         <h1>Rob's personal website</h1>
         <nav>
-           <a href="#contact">Kontakt</a>
-           <a href="#bio">Bio</a> 
+            <a href="#contact">Kontakt</a>
+            <a href="#bio">Bio</a>
         </nav>
     </header>
     <main>
         <section>
             <div>
-              <img src="./images/me.jpeg" alt="Hier sollte ein Bild von mir sein" title="Its me :)">
+                <img src="images/me.jpeg" alt="">
             </div>
         </section>
         <section>
             <div>
-            <h2>interests</h2>
-                    <table>
-                        <tbody>
-                            <tr>
-                                <td>Rennrad fahren</td>
-                                <td>Grafik Design</td>
-                                <td>Schriften</td>
-                                <td>Sneaker</td>
-                            </tr>
-                            <tr>
-                                <td>Reisen</td>
-                                <td>Süd-Ost-Asien</td>
-                                <td>80er Jahre</td>
-                                <td>Videospiele</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    </section>
-                </div>
+                <h2>interests</h2>
+                <table>
+                    <tbody>
+                        <tr>
+                            <td>Rennrad fahren</td>
+                            <td>Grafik Design</td>
+                            <td>Schriften</td>
+                            <td>Sneaker</td>
+                        </tr>
+                        <tr>
+                            <td>Reisen</td>
+                            <td>Süd-Ost-Asien</td>
+                            <td>80er Jahre</td>
+                            <td>Videospiele</td>
+                        </tr>
+                    </tbody>
+                </table>
+        </section>
+        </div>
         </section>
         <section>
             <div>
                 <h2>skills</h2>
-                    <table>
-                        <tbody>
-                            <tr>
-                                <td>HTML</td>
-                                <td>CSS</td>
-                                <td>JavaScript</td>
-                                <td>Java</td>
-                            </tr>
-                            <tr>
-                                <td>Adobe CS</td>
-                                <td>Procreate</td>
-                                <td>Final Cut</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
+                <table>
+                    <tbody>
+                        <tr>
+                            <td>HTML</td>
+                            <td>CSS</td>
+                            <td>JavaScript</td>
+                            <td>Java</td>
+                        </tr>
+                        <tr>
+                            <td>Adobe CS</td>
+                            <td>Procreate</td>
+                            <td>Final Cut</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </section>
         <section id="contact">
             <h2>Kontakt</h2>
+
             <p>Tel 017X XXX XXX X</p>
             <p>Mail<a href="mailto:roscha80@web.de">roscha80@web.de</a></p>
         </section>
         <section>
             <div>
-            <a href=""><img src="./images/Octocat.png" alt="Github">Github</a>
-            <a href=""><img src="./images/codepen.png" alt="Codepen">Codepen</a>
-            <a href=""><img src="./images/linkedin.png" alt="LinkedIn">LinkedIn</a>
-            <a href=""><img src="./images/640px-Xing_logo.svg.png" alt="Xing">Xing</a>
+                <ul>
+                    <li><a href=""><img src="images/Octocat.png" alt="">Meet me on Github</a></li>
+                    <li><a href=""><img src="images/codepen.png" alt="">Meet me on Codepen</a></li>
+                    <li><a href=""><img src="images/linkedin.png" alt="">Meet me on LinkedIn</a></li>
+                    <li><a href=""><img src="images/640px-Xing_logo.svg.png" alt="">Meet me on Xing</a></li>
+                </ul>
             </div>
         </section>
         <section id="bio">
             <h2>Bio</h2>
             <div>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis, quo cum. Dolore, doloremque! Nisi quaerat omnis optio? Officiis explicabo, laborum eos sequi accusantium nihil aspernatur eaque dolorem non reiciendis enim.</p>
-            </div>   
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis, quo cum. Dolore, doloremque! Nisi
+                    quaerat omnis optio? Officiis explicabo, laborum eos sequi accusantium nihil aspernatur eaque
+                    dolorem non reiciendis enim.</p>
+            </div>
         </section>
         <section>
             <div>
                 <h2>CV</h2>
                 <table>
                     <tbody>
-                    <tr>
-                    <td>04.2021 bis jetzt</td>
-                    <td>Web Development Bootcamp</td>
-                    <td>neuefische GmbH</td>
-                     <td>Hamburg</td>
-                    </tr>
-                    <tr>
-                    <td>04.2020 bis 03.2021</td>
-                    <td>Junior Java Developer</td>
-                    <td>Academic Works</td>
-                    <td>Hamburg</td>
-                    </tr>
-                    <tr>
-                    <td>01.2020 bis 03.2020</td>
-                    <td>Java Bootcamp</td>
-                    <td>Academic Works</td>
-                     <td>Hamburg</td>
-                    </tr>
-                    <tr>
-                    <td>05.2014 bis 12.2019</td>
-                    <td>Grafiker/Designer</td>
-                    <td>Justfitteds</td>
-                     <td>Hamburg</td>
-                    </tr>
-                    <tr>
-                    <td>2013 bis 2014</td>
-                    <td>Grafiker/Cutter/Colorist</td>
-                    <td>Mamapost GmbH</td>
-                     <td>Hamburg/Berlin</td>
-                    </tr>
-                    <tr>
-                    <td>2008 bis 2013</td>
-                    <td>Grafiker/Head of graphic</td>
-                    <td>TVN Group/Mobile Productions</td>
-                     <td>Hannover/Hamburg</td>
-                    </tr>
+                        <tr>
+                            <td>04.2021 bis jetzt</td>
+                            <td>Web Development Bootcamp</td>
+                            <td>neuefische GmbH</td>
+                            <td>Hamburg</td>
+                        </tr>
+                        <tr>
+                            <td>04.2020 bis 03.2021</td>
+                            <td>Junior Java Developer</td>
+                            <td>Academic Works</td>
+                            <td>Hamburg</td>
+                        </tr>
+                        <tr>
+                            <td>01.2020 bis 03.2020</td>
+                            <td>Java Bootcamp</td>
+                            <td>Academic Works</td>
+                            <td>Hamburg</td>
+                        </tr>
+                        <tr>
+                            <td>05.2014 bis 12.2019</td>
+                            <td>Grafiker/Designer</td>
+                            <td>Justfitteds</td>
+                            <td>Hamburg</td>
+                        </tr>
+                        <tr>
+                            <td>2013 bis 2014</td>
+                            <td>Grafiker/Cutter/Colorist</td>
+                            <td>Mamapost GmbH</td>
+                            <td>Hamburg/Berlin</td>
+                        </tr>
+                        <tr>
+                            <td>2008 bis 2013</td>
+                            <td>Grafiker/Head of graphic</td>
+                            <td>TVN Group/Mobile Productions</td>
+                            <td>Hannover/Hamburg</td>
+                        </tr>
                     </tbody>
-                    </table>
+                </table>
             </div>
         </section>
     </main>
     <footer>
-        <a href="">Impressum</a>
-        <a href="">AGB</a>
-        <a href="">Kontakt</a>
+        <ul>
+            <li><a href="#impressum">Impressum</a></li>
+            <li><a href="">AGB</a></li>
+            <li><a href="">Kontakt</a></li>
+        </ul>
     </footer>
 </body>
+
 </html>
