Clean html and delete unuseful elements

--- a/index.html
+++ b/index.html
@@ -21,71 +21,49 @@
       </section>
       <section>
         <h2>interests</h2>
-        <table>
-          <tbody>
-            <tr>
-              <td>Rennrad fahren</td>
-              <td>Grafik Design</td>
-              <td>Schriften</td>
-              <td>Sneaker</td>
-            </tr>
-            <tr>
-              <td>Reisen</td>
-              <td>Süd-Ost-Asien</td>
-              <td>80er Jahre</td>
-              <td>Videospiele</td>
-            </tr>
-          </tbody>
-        </table>
+        <ul>
+          <li>Rennrad fahren</li>
+          <li>Grafik Design</li>
+          <li>Schriften</li>
+          <li>Sneaker</li>
+          <li>Reisen</li>
+          <li>Süd-Ost-Asien</li>
+          <li>80er Jahre</li>
+          <li>Filme</li>
+          <li>Videospiele</li>
+        </ul>
       </section>
       <section>
         <h2>skills</h2>
-        <table>
-          <tbody>
-            <tr>
-              <td>HTML</td>
-              <td>CSS</td>
-              <td>JavaScript</td>
-              <td>Java</td>
-            </tr>
-            <tr>
-              <td>Adobe CS</td>
-              <td>Procreate</td>
-              <td>Final Cut</td>
-            </tr>
-          </tbody>
-        </table>
+        <ul>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>Java</li>
+          <li>Adobe CS</li>
+          <li>Procreate</li>
+          <li>Final Cut</li>
+        </ul>
       </section>
       <section id="contact">
         <h2>Kontakt</h2>
 
-        Tel 017X XXX XXX X<br />
+        Tel <a href="tel:+491721234567"></a> 017X XXX XXX X<br />
         Mail<a href="mailto:roscha80@web.de">roscha80@web.de</a>
       </section>
       <section>
-        <ul>
-          <li>
-            <a href="" rel="noopener noreferrer"
-              ><img src="images/Octocat.png" alt="" />Meet me on Github</a
-            >
-          </li>
-          <li>
-            <a href="" rel="noopener noreferrer"
-              ><img src="images/codepen.png" alt="" />Meet me on Codepen</a
-            >
-          </li>
-          <li>
-            <a href="" rel="noopener noreferrer"
-              ><img src="images/linkedin.png" alt="" />Meet me on LinkedIn</a
-            >
-          </li>
-          <li>
-            <a href="" rel="noopener noreferrer"
-              ><img src="images/640px-Xing_logo.svg.png" alt="" />Meet me on
-              Xing</a
-            >
-          </li>
-        </ul>
+        <a href="" rel="noopener noreferrer"
+          ><img src="images/Octocat.png" alt="" />Meet me on Github</a
+        ><br />
+        <a href="" rel="noopener noreferrer"
+          ><img src="images/codepen.png" alt="" />Meet me on Codepen</a
+        ><br />
+        <a href="" rel="noopener noreferrer"
+          ><img src="images/linkedin.png" alt="" />Meet me on LinkedIn</a
+        ><br />
+        <a href="" rel="noopener noreferrer"
+          ><img src="images/640px-Xing_logo.svg.png" alt="" />Meet me on Xing</a
+        ><br />
       </section>
       <section id="bio">
         <h2>Bio</h2>
