Change table to description list

--- a/index.html
+++ b/index.html
@@ -76,46 +76,37 @@
       </section>
       <section>
         <h2>CV</h2>
-        <table>
-          <tbody>
-            <tr>
-              <td>04.2021 bis jetzt</td>
-              <td>Web Development Bootcamp</td>
-              <td>neuefische GmbH</td>
-              <td>Hamburg</td>
-            </tr>
-            <tr>
-              <td>04.2020 bis 03.2021</td>
-              <td>Junior Java Developer</td>
-              <td>Academic Works</td>
-              <td>Hamburg</td>
-            </tr>
-            <tr>
-              <td>01.2020 bis 03.2020</td>
-              <td>Java Bootcamp</td>
-              <td>Academic Works</td>
-              <td>Hamburg</td>
-            </tr>
-            <tr>
-              <td>05.2014 bis 12.2019</td>
-              <td>Grafiker/Designer</td>
-              <td>Justfitteds</td>
-              <td>Hamburg</td>
-            </tr>
-            <tr>
-              <td>2013 bis 2014</td>
-              <td>Grafiker/Cutter/Colorist</td>
-              <td>Mamapost GmbH</td>
-              <td>Hamburg/Berlin</td>
-            </tr>
-            <tr>
-              <td>2008 bis 2013</td>
-              <td>Grafiker/Head of graphic</td>
-              <td>TVN Group/Mobile Productions</td>
-              <td>Hannover/Hamburg</td>
-            </tr>
-          </tbody>
-        </table>
+        <dl>
+          <dt>04.2021 bis jetzt</dt>
+          <dd>Web Development Bootcamp</dd>
+          <dd>neuefische GmbH</dd>
+          <dd>Hamburg</dd>
+          <br />
+          <dt>04.2020 bis 03.2021</dt>
+          <dd>Junior Java Developer</dd>
+          <dd>Academic Works</dd>
+          <dd>Hamburg</dd>
+          <br />
+          <dt>01.2020 bis 03.2020</dt>
+          <dd>Java Bootcamp</dd>
+          <dd>Academic Works</dd>
+          <dd>Hamburg</dd>
+          <br />
+          <dt>05.2014 bis 12.2019</dt>
+          <dd>Grafiker/Designer</dd>
+          <dd>Justfitteds</dd>
+          <dd>Hamburg</dd>
+          <br />
+          <dt>2013 bis 2014</dt>
+          <dd>Grafiker/Cutter/Colorist</dd>
+          <dd>Mamapost GmbH</dd>
+          <dd>Hamburg/Berlin</dd>
+          <br />
+          <dt>2008 bis 2013</dt>
+          <dd>Grafiker/Head of graphic</dd>
+          <dd>TVN Group/Mobile Productions</dd>
+          <dd>Hannover/Hamburg</dd>
+        </dl>
       </section>
     </main>
     <footer>
