--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
   </head>
 
   <body>
-    <header>
+    <header class="page-header">
       <h1>Rob's personal website</h1>
       <nav>
-        <a href="#contact">Kontakt</a>
-        <a href="#bio">Bio</a>
+        <a class="button" href="#contact">Kontakt</a>
+        <a class="button" href="#bio">Bio</a>
       </nav>
     </header>
     <main>
       <section>
-        <img src="images/me.jpeg" alt="" />
+        <img class="image-fluid" src="images/me.jpeg" alt="" />
       </section>
       <section>
         <h2>interests</h2>
@@ -59,7 +59,8 @@
       </section>
       <section>
         <a href="" rel="noopener noreferrer"
-          ><img src="images/Octocat.png" alt="" />Meet me on Github</a
+          ><img class="octocat" src="images/Octocat.png" alt="" />Meet me on
+          Github</a
         ><br />
         <a href="" rel="noopener noreferrer"
           ><img src="images/codepen.png" alt="" />Meet me on Codepen</a
