Change photosizes and css

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a class="button" href="#bio">Bio</a>
       </nav>
     </header>
-    <main>
+    <main class="page-main">
       <section>
         <img class="image-fluid" src="images/me.jpeg" alt="" />
       </section>
@@ -57,20 +57,33 @@
         Tel <a href="tel:+491721234567"></a> 017X XXX XXX X<br />
         Mail<a href="mailto:roscha80@web.de">roscha80@web.de</a>
       </section>
-      <section>
-        <a href="" rel="noopener noreferrer"
-          ><img class="octocat" src="images/Octocat.png" alt="" />Meet me on
-          Github</a
+      <section class="links-social">
+        <img src="images/Octocat.png" alt="" /><a
+          class="button"
+          href=""
+          rel="noopener noreferrer"
+          >Meet me on Github</a
         ><br />
-        <a href="" rel="noopener noreferrer"
-          ><img src="images/codepen.png" alt="" />Meet me on Codepen</a
+        <img src="images/codepen.png" alt="" /><a
+          class="button"
+          href=""
+          rel="noopener noreferrer"
+          >Meet me on Codepen</a
         ><br />
-        <a href="" rel="noopener noreferrer"
-          ><img src="images/linkedin.png" alt="" />Meet me on LinkedIn</a
+        <img src="images/linkedin.png" alt="" /><a
+          class="button"
+          href=""
+          rel="noopener noreferrer"
+          >Meet me on LinkedIn</a
         ><br />
-        <a href="" rel="noopener noreferrer"
-          ><img src="images/640px-Xing_logo.svg.png" alt="" />Meet me on Xing</a
-        ><br />
+        <img src="images/640px-Xing_logo.svg.png" alt="" /><a
+          class="button"
+          href=""
+          rel="noopener noreferrer"
+        >
+          Meet me on Xing</a
+        >
+        <br />
       </section>
       <section id="bio">
         <h2>Bio</h2>
@@ -118,9 +131,9 @@
     </main>
     <footer>
       <nav>
-        <a href="#impressum">Impressum</a>
-        <a href="#agb">AGB</a>
-        <a href="#contact">Kontakt</a>
+        <a class="button" href="#impressum">Impressum</a>
+        <a class="button" href="#agb">AGB</a>
+        <a class="button" href="#contact">Kontakt</a>
       </nav>
     </footer>
   </body>
