--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <body>
     <header class="page-header">
-      <h1>Rob's personal website</h1>
+      <h1>Paul's personal website</h1>
       <nav>
         <a class="button" href="#contact">Kontakt</a>
         <a class="button" href="#bio">Bio</a>
