Add CSS and English

--- a/index.html
+++ b/index.html
@@ -4,39 +4,37 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Robs Personal Website</title>
+    <title>Rob's Personal Website</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap"
       rel="stylesheet"
     />
   </head>
 
   <body>
     <header class="page-header">
-      <h1>Paul's personal website</h1>
+      <h1>Rob's personal website</h1>
       <nav>
-        <a class="button" href="#contact">Kontakt</a>
-        <a class="button" href="#bio">Bio</a>
+        <a class="button-dark" href="#contact">Contact</a>
+        <a class="button-dark" href="#bio">Bio</a>
       </nav>
     </header>
     <main class="page-main">
-      <section>
-        <img class="image-fluid" src="images/me.jpeg" alt="" />
-      </section>
+      <img class="image-fluid" src="images/me.jpeg" alt="" />
       <section>
         <h2>interests</h2>
         <ul>
-          <li>Rennrad fahren</li>
+          <li>Roadbike/Crossbike</li>
           <li>Grafik Design</li>
-          <li>Schriften</li>
+          <li>Fonts</li>
           <li>Sneaker</li>
-          <li>Reisen</li>
-          <li>Süd-Ost-Asien</li>
-          <li>80er Jahre</li>
-          <li>Filme</li>
-          <li>Videospiele</li>
+          <li>Travel</li>
+          <li>South-East-Asia</li>
+          <li>80ties</li>
+          <li>Movies</li>
+          <li>Videogames</li>
         </ul>
       </section>
       <section>
@@ -52,32 +50,32 @@
         </ul>
       </section>
       <section id="contact">
-        <h2>Kontakt</h2>
-
-        Tel <a href="tel:+491721234567"></a> 017X XXX XXX X<br />
-        Mail<a href="mailto:roscha80@web.de">roscha80@web.de</a>
+        <h2>contact</h2>
+        Mail me<a class="button-light" href="mailto:roscha80@web.de"
+          >roscha80@web.de</a
+        ><br />
       </section>
-      <section class="links-social">
+      <section>
         <img src="images/Octocat.png" alt="" /><a
-          class="button"
+          class="button-light"
           href=""
           rel="noopener noreferrer"
           >Meet me on Github</a
         ><br />
         <img src="images/codepen.png" alt="" /><a
-          class="button"
+          class="button-light"
           href=""
           rel="noopener noreferrer"
           >Meet me on Codepen</a
         ><br />
         <img src="images/linkedin.png" alt="" /><a
-          class="button"
+          class="button-light"
           href=""
           rel="noopener noreferrer"
           >Meet me on LinkedIn</a
         ><br />
         <img src="images/640px-Xing_logo.svg.png" alt="" /><a
-          class="button"
+          class="button-light"
           href=""
           rel="noopener noreferrer"
         >
@@ -86,7 +84,7 @@
         <br />
       </section>
       <section id="bio">
-        <h2>Bio</h2>
+        <h2>bio</h2>
         <p>
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis, quo
           cum. Dolore, doloremque! Nisi quaerat omnis optio? Officiis explicabo,
@@ -95,34 +93,34 @@
         </p>
       </section>
       <section>
-        <h2>CV</h2>
+        <h2>cv</h2>
         <dl>
-          <dt>04.2021 bis jetzt</dt>
+          <dd>04.2021 bis jetzt</dd>
           <dd>Web Development Bootcamp</dd>
           <dd>neuefische GmbH</dd>
           <dd>Hamburg</dd>
           <br />
-          <dt>04.2020 bis 03.2021</dt>
+          <dd>04.2020 bis 03.2021</dd>
           <dd>Junior Java Developer</dd>
           <dd>Academic Works</dd>
           <dd>Hamburg</dd>
           <br />
-          <dt>01.2020 bis 03.2020</dt>
+          <dd>01.2020 bis 03.2020</dd>
           <dd>Java Bootcamp</dd>
           <dd>Academic Works</dd>
           <dd>Hamburg</dd>
           <br />
-          <dt>05.2014 bis 12.2019</dt>
+          <dd>05.2014 bis 12.2019</dd>
           <dd>Grafiker/Designer</dd>
           <dd>Justfitteds</dd>
           <dd>Hamburg</dd>
           <br />
-          <dt>2013 bis 2014</dt>
+          <dd>2013 bis 2014</dd>
           <dd>Grafiker/Cutter/Colorist</dd>
           <dd>Mamapost GmbH</dd>
           <dd>Hamburg/Berlin</dd>
           <br />
-          <dt>2008 bis 2013</dt>
+          <dd>2008 bis 2013</dd>
           <dd>Grafiker/Head of graphic</dd>
           <dd>TVN Group/Mobile Productions</dd>
           <dd>Hannover/Hamburg</dd>
@@ -130,11 +128,13 @@
       </section>
     </main>
     <footer>
-      <nav>
-        <a class="button" href="#impressum">Impressum</a>
-        <a class="button" href="#agb">AGB</a>
-        <a class="button" href="#contact">Kontakt</a>
-      </nav>
+      <section>
+        <nav>
+          <a class="button-light" href="#impressum">Impressum</a>
+          <a class="button-light" href="#agb">AGB</a>
+          <a class="button-light" href="#contact">Contact</a>
+        </nav>
+      </section>
     </footer>
   </body>
 </html>
