--- a/index.html
+++ b/index.html
@@ -23,31 +23,34 @@
     </header>
     <main class="page-main">
       <img class="image-fluid" src="images/me.jpeg" alt="" />
-      <section>
-        <h2>interests</h2>
-        <ul>
-          <li>Roadbike/Crossbike</li>
-          <li>Grafik Design</li>
-          <li>Fonts</li>
-          <li>Sneaker</li>
-          <li>Travel</li>
-          <li>South-East-Asia</li>
-          <li>80ties</li>
-          <li>Movies</li>
-          <li>Videogames</li>
-        </ul>
-      </section>
-      <section>
-        <h2>skills</h2>
-        <ul>
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>Java</li>
-          <li>Adobe CS</li>
-          <li>Procreate</li>
-          <li>Final Cut</li>
-        </ul>
+      <section class="lists">
+        <div>
+          <h2>interests</h2>
+          <ul>
+            <li>Roadbike/Crossbike</li>
+            <li>Grafik Design</li>
+            <li>Fonts</li>
+            <li>Sneaker</li>
+            <li>Travel</li>
+            <li>South-East-Asia</li>
+            <li>80ties</li>
+            <li>Movies</li>
+            <li>Videogames</li>
+          </ul>
+        </div>
+
+        <div>
+          <h2>skills</h2>
+          <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>Java</li>
+            <li>Adobe CS</li>
+            <li>Procreate</li>
+            <li>Final Cut</li>
+          </ul>
+        </div>
       </section>
       <section id="contact">
         <h2>contact</h2>
