--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <body>
     <header class="page-header">
-      <h1>Rob's personal website</h1>
+      <h1 id="start">Rob's personal website</h1>
       <nav>
         <a class="button-dark" href="#contact">Contact</a>
         <a class="button-dark" href="#bio">Bio</a>
@@ -136,6 +136,7 @@
           <a class="button-light" href="#impressum">Impressum</a>
           <a class="button-light" href="#agb">AGB</a>
           <a class="button-light" href="#contact">Contact</a>
+          <a class="button-light" href="#start">Back to Top</a>
         </nav>
       </section>
     </footer>
