Add links to social media and modify css

--- a/index.html
+++ b/index.html
@@ -59,31 +59,22 @@
         ><br />
       </section>
       <section>
-        <img src="images/Octocat.png" alt="" /><a
-          class="button-light"
-          href=""
-          rel="noopener noreferrer"
-          >Meet me on Github</a
+        <a href="https://github.com/roscha80" rel="noopener noreferrer"
+          ><img src="images/Octocat.png" alt="Meet me on Github" /></a
         ><br />
-        <img src="images/codepen.png" alt="" /><a
-          class="button-light"
-          href=""
-          rel="noopener noreferrer"
-          >Meet me on Codepen</a
+        <a href="https://codepen.io/your-work/" rel="noopener noreferrer"
+          ><img src="images/codepen.png" alt="Meet me on Codepen" /></a
         ><br />
-        <img src="images/linkedin.png" alt="" /><a
-          class="button-light"
-          href=""
+        <a
+          href="https://www.linkedin.com/in/rob-schade-ab892b19a/"
           rel="noopener noreferrer"
-          >Meet me on LinkedIn</a
+          ><img src="images/linkedin.png" alt="Meet me on LinkedIn" /></a
         ><br />
-        <img src="images/640px-Xing_logo.svg.png" alt="" /><a
-          class="button-light"
-          href=""
+        <a
+          href="https://www.xing.com/profile/Robert_Schade13/portfolio"
           rel="noopener noreferrer"
-        >
-          Meet me on Xing</a
-        >
+          ><img src="images/640px-Xing_logo.svg.png" alt="Meet me on Xing" />
+        </a>
         <br />
       </section>
       <section id="bio">
